syntax = "proto3";

package article.v1;

option go_package = "github.com/morning-night-dream/platform/pkg/api/article/v1;articlev1";

// 記事サービス
service ArticleService {
  // 共有
  // Need X-API-KEY Header
  rpc Share(ShareRequest) returns (ShareResponse) {}
  // 一覧取得
  rpc List(ListRequest) returns (ListResponse) {}
  // 削除
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  // 既読
  rpc Read(ReadRequest) returns (ReadResponse) {}
}

// 記事モデル
message Article {
  string id = 1;
  string url = 2;
  string title = 3;
  string description = 4;
  string thumbnail = 5;
  repeated string tags = 6;
}

// 記事共有リクエスト
message ShareRequest {
  string url = 1;
}

// 記事共有レスポンス
message ShareResponse {}

// 記事一覧リクエスト
message ListRequest {
  string page_token = 1;
  uint32 max_page_size = 2;
}

// 記事一覧レスポンス
message ListResponse {
  repeated Article articles = 1;
  string next_page_token = 2;
}

// 削除リクエスト
message DeleteRequest {
  string id = 1;
}

// 削除レスポンス
message DeleteResponse {}

// 既読リクエスト
message ReadRequest {
  string id = 1;
}

// 既読レスポンス
message ReadResponse {}
